# MilkDrop3

./: CHANGELOG.MD  README.md  TODO.MD
code/: CMakeLists.txt  LICENSE.txt  MilkDrop3.sln
code/audio/: CMakeLists.txt  audiobuf.cpp  audiobuf.h  cleanup.h  common.h  guid.cpp  log.cpp  log.h  loopback-capture.cpp  loopback-capture.h  prefs.cpp  prefs.h
code/ns-eel2/: CMakeLists.txt  nseel-lextab.c  y.tab.h
code/resources/Milkdrop2/data/: blur1_ps.fx  blur2_ps.fx  blur_vs.fx  comp_ps.fx  include.fx  warp_ps.fx
code/resources/Milkdrop2/docs/: LICENSE.txt  milkdrop.html  milkdrop_preset_authoring.html
code/vis_milk2/: CMakeLists.txt  Milkdrop2PcmVisualizer.cpp  defines.h  dx_on_gl.h  dxcontext.cpp  linux_utility_stubs.cpp  menu.cpp  menu_strings.h  milkdropfs.cpp  plugin.cpp  plugin.h  plugin.rc  plugin.vcxproj  plugin.vcxproj.filters  pluginshell.cpp  pluginshell.h  shell_defines.h  state.cpp  state.h  support.cpp  support.h  texmgr.cpp  texmgr.h  textmgr.cpp  textmgr.h  utility.cpp  utility.h  wasabi.cpp
code/vis_milk2/glad/: glad.c  glad.h
code/vis_milk2/linux_includes/vis_milk2/: utility.h
linux/: LINUX_SETUP_GUIDE.md  README.md  README.txt  milkdrop3-launcher.sh
source/audio/: log.cpp
source/resources/Milkdrop2/data/: comp_vs.fx  warp_vs.fx
source/vis_milk2/: dxcontext.h  md_defines.h  milkdropfs.cpp  pluginshell.cpp  resource.h  support.cpp  support.h  wasabi.h
